--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,21 @@ header.cv-title {
     justify-content: center;
     position: relative;
     top: 185px;
-    left: 105px;
+    left: 155px;
+}
+
+header h1 {
+  color: var(--color-accent);
+}
+
+.sidebar h2 {
+  margin: 0;
+  color: deepskyblue;
+}
+
+.sidebar h3 {
+  font-size: 1.17em; 
+  margin-bottom: 0;
 }
 
 .container {
@@ -25,34 +39,12 @@ header.cv-title {
   padding: 20px;
 }
 
-.cv-title h1 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid color var(--color-accent); /* The cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .05em; /* Adjust as needed */
-  position: absolute;
-    left: 305px;
-    top: -50px;
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end 3;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% {color: var(--color-accent); }
-}
-
 main {
-  margin-top: 225px; /* Espace entre le titre et le contenu principal */
+  margin-top: 225px; 
+}
+
+section h2 {
+  color: deepskyblue;
 }
 
 .card {
@@ -70,6 +62,7 @@ main {
 ul {
   list-style-type: none;
   padding: 0;
+  margin-top: 0;
 }
 
 li {
