--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,6 @@
-@import 'animate.css/animate.min.css';
-
+@charset "UTF-8";
 /* Variables de couleurs */
-:root {
-  --color-background: rgba(35, 40, 45, 1);
-  --color-text: rgba(255, 255, 255, 1);
-  --color-accent: rgba(120, 130, 140, 1);
-  --color-hover: rgba(95, 105, 115, 1);
-}
-
-/* Styles globaux */
+/* Mixins */
 *,
 *::before,
 *::after {
@@ -18,283 +10,324 @@
 }
 
 body {
-  background-color: var(--color-background);
-  color: var(--color-text);
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+  background-color: rgb(35, 40, 45);
+  color: rgb(255, 255, 255);
+  font-family: "Roboto", sans-serif;
   padding: 0;
-  overflow-x: hidden; /* Empêche le défilement horizontal */
+  margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
-
-a {
-  color: rgba(180, 190, 200, 1); 
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-a:hover {
-  color: rgba(255, 255, 255, 1); 
-  text-decoration: none; 
-}
-
-a:active {
-  color: rgba(140, 150, 160, 1); /* Un gris plus foncé lors du clic */
-}
-
-
-header.cv-title {
+body header.cv-title {
   display: flex;
   justify-content: center;
   position: relative;
   top: 185px;
-  left: 155px;
+  left: 0;
+  margin-bottom: 2px;
 }
-
-header h1 {
-  color: var(--color-accent);
+body header.cv-title h1 {
+  color: rgb(120, 130, 140);
+  font-size: 1em;
 }
-
-address {
-  margin-bottom: 25px;
-}
-
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 20px;
-  width: 100%; /* Assurez-vous que le conteneur ne dépasse pas la largeur de l'écran */
-}
-
-.sidebar {
-  width: 35%;
+body .container {
   display: flex;
   flex-direction: column;
-  padding: 20px;
-  background: var(--color-background);
+  padding: 10px;
 }
-
-ul {
+body .container .container {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+body .container .sidebar {
+  width: 100%;
+  font-size: 0.8em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2px;
+}
+body .container .sidebar h2 {
+  font-size: 1.5em;
+  text-align: center;
+  margin: 15px 0 15px 0;
+  color: rgb(120, 130, 140);
+}
+body .container .sidebar .profile-photo {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
+body .container .sidebar address {
+  margin-top: 15px;
+}
+body .container .sidebar address a {
+  color: mediumaquamarine;
+}
+body .container .sidebar ul {
   list-style-type: none;
-  margin-bottom: 25px;
 }
-
-li {
+body .container .sidebar ul h3 {
+  margin: 15px 0 15px 0;
+  color: deepskyblue;
+  text-align: start !important;
+}
+body .container .sidebar ul li {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 10px;
 }
-
-.sidebar h2 {
+body .container .sidebar ul li li > span {
+  display: block; /* Assurez-vous que span est affiché comme bloc */
+  text-align: center; /* Exemple de centrage de span */
+  color: #777; /* Exemple de couleur de texte */
+}
+body main {
   margin: 0;
-  color: deepskyblue;
-  margin-bottom: 15px;
 }
-
-.sidebar h3 {
-  font-size: 1.17em; 
-  margin-bottom: 0;
+body section h2 {
+  font-size: 1.2em;
+  margin: 15px 0 15px 0;
 }
-
-.profile-photo {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  margin-bottom: 20px;
-}
-
-
-main {
-  flex: 1;
-  margin-top: 225px;
-  padding: 20px;
-  width: 100%; /* Assurez-vous que le main ne dépasse pas la largeur de l'écran */
-}
-
-section h2 {
-  color: deepskyblue;
-}
-
-.card {
-  background: var(--color-background);
-  border: 1px solid var(--color-accent);
+body .card {
+  margin: 5px;
+  padding: 10px;
+  background: rgb(35, 40, 45);
+  border: 1px solid rgb(120, 130, 140);
   border-radius: 8px;
-  margin: 50px 0;
-  padding: 15px;
 }
-
-.card div,
-.card h3,
-.card ul,
-.card li {
+body .card div, body .card ul {
+  font-size: 0.9em;
+  list-style-type: none;
+}
+body .card h2 {
+  color: rgb(120, 130, 140);
+}
+body .card h3 {
+  font-size: 1.1em;
+  margin: 15px 0 15px 0;
+  color: deepskyblue;
+}
+body li {
   margin-bottom: 15px;
 }
-
-.card h3 {
-  color: var(--color-accent);
+body p {
+  font-size: 1em;
 }
-
-.card ul {
-  list-style-type: none;
-  padding-left: 20px;
-}
-
-.card li {
-  padding: 5px 0;
-  list-style-type: none;
-}
-
-strong {
-  color: var(--color-accent);
-}
-
-footer {
-  padding: 20px;
+body footer p {
+  font-size: 0.6em;
+  display: flex;
+  justify-content: center;
   text-align: center;
-  background: var(--color-background);
-  color: var(--color-text);
 }
 
-
-/* Media Queries */
-@media screen and (max-width: 320px) {
-  body, #root {
-    width: 100%;
-    overflow-x: hidden; /* Empêche le défilement horizontal */
-  }
-
-  header.cv-title {
-    top: 195px;
+/* Pour les écrans de 320px à 425px */
+@media screen and (max-width: 425px) {
+  body header.cv-title {
+    position: relative;
+    top: 185px;
     left: 0;
-    margin-bottom: 5px;
-    width: 100%;
-    text-align: center; /* Centrer le texte */
+    margin-bottom: 2px;
+    text-align: center;
   }
-
-  header h1 {
-    font-size: 1em;
+  body header.cv-title h1 {
+    color: rgb(120, 130, 140);
+    font-size: 1.2em;
   }
-
-  .container {
+  body .container {
+    display: flex;
     flex-direction: column;
-    padding: 10px; /* Ajuster le padding */
+    padding: 10px;
   }
-
-  .sidebar {
+  body .sidebar {
     width: 100%;
     font-size: 0.8em;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 2px;
   }
-  h1 {
-    margin-top: 20px;
+  body .sidebar h2 {
+    font-size: 1.1em;
+    text-align: center;
+    margin: 15px 0;
+    color: rgb(120, 130, 140);
   }
-
-  .profile-photo {
+  body .sidebar .profile-photo {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
-
-  .sidebar h2 {
-    font-size: 1.1em;
-    text-align: center;
+  body .sidebar address {
+    margin-top: 15px;
   }
-
-  ul {
-    text-align: center;
+  body .sidebar address a {
+    color: mediumaquamarine;
+  }
+  body .sidebar ul {
     list-style-type: none;
-    overflow-x: hidden;
-    padding: 20px;
   }
-
-  main {
+  body .sidebar ul h3 {
+    margin: 15px 0;
+    color: deepskyblue;
+    text-align: center;
+  }
+  body .sidebar ul li {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  body .sidebar ul li span {
+    display: block;
+    color: #ccc;
+  }
+  body main {
     margin: 0;
-    padding: 15px; 
+    padding: 15px;
   }
-
-  section {
-    margin-top: 10px;
+  body section h2 {
+    font-size: 1.3em;
+    margin: 15px 0;
   }
-
-  section h2 {
-    font-size: 1.2em;
+  body .card {
+    margin: 10px;
+    padding: 12px;
+    background: rgb(35, 40, 45);
+    border: 1px solid rgb(120, 130, 140);
+    border-radius: 8px;
   }
-
-  /*.card {
-    margin: 5px;
-  }*/
-
-  .card div, .card ul {
+  body .card div, body .card ul {
     font-size: 0.9em;
+    list-style-type: none;
   }
-
-  .card h3 {
-    font-size: 1.1em;
+  body .card h3 {
+    font-size: 1.2em;
+    margin: 15px 0;
+    color: deepskyblue;
   }
-
-  p {
-    font-size: 0.6em;
+  body p {
+    font-size: 1em;
   }
-}
-
-@media screen and (max-width: 375px) {
-  .sidebar {
-    width: 100%;
+  body footer p {
     font-size: 0.8em;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 2px;
-  }
-
-  .profile-photo {
-    width: 210px;
-    height: 210px;
-    position: relative;
-    top: -40px;
-  }
-
-  header.cv-title {
-    top: 240px;
-    left: 0px;
     text-align: center;
-  }
-
-  header h1 {
-    font-size: 1.2em;
-    position: absolute;
-    top: -5px;
-  }
-
-  main {
-    margin: 0;
-    padding: 0;
-  }
-
-  .sidebar {
-    width: 100%;
-    padding: 20px;
-  }
-
-  address {
-    font-size: 1.2em;
-  }
-
-  ul {
-    text-align: center;
-  }
-
-  .card {
-    margin: 0 0 25px 0;
-  }
-
-  section h2 {
-    margin: 0 0 10px 0;
-  }
-
-  .card div {
-    text-align: center;
+    margin: 10px;
   }
 }
+/* Pour les écrans de 768px et plus */
+@media screen and (min-width: 768px) {
+  body header.cv-title {
+    top: 140px;
+    left: 160px;
+    margin-bottom: 20px;
+  }
+  body header.cv-title h1 {
+    font-size: 1.5em;
+  }
+  body .container {
+    display: flex;
+    flex-direction: row;
+    padding: 25px;
+  }
+  body .sidebar {
+    width: 35%;
+    font-size: 1.1em;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  body .sidebar .profile-photo {
+    width: 180px;
+    height: 180px;
+  }
+  body .sidebar h2 {
+    font-size: 1.3em;
+  }
+  body main {
+    width: 65%;
+    padding: 0 25px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 150px;
+  }
+  body section h2 {
+    font-size: 1.5em;
+  }
+  body .card {
+    margin: 20px 0;
+    padding: 20px;
+    background: rgb(35, 40, 45);
+    border: 1px solid rgb(120, 130, 140);
+    border-radius: 8px;
+  }
+  body .card div, body .card ul {
+    font-size: 0.9em;
+  }
+  body .card h3 {
+    font-size: 1.4em;
+  }
+  body p {
+    font-size: 0.9em;
+  }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  footer p {
+    font-size: 0.8em;
+  }
+}
+/* Pour les écrans de 1024px et plus */
+@media screen and (min-width: 1024px) {
+  body header.cv-title {
+    top: 170px;
+    left: 250px;
+    margin-bottom: 25px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+  }
+  body header.cv-title h1 {
+    font-size: 1.7em;
+  }
+  body .container {
+    padding: 30px;
+  }
+  body .sidebar {
+    width: 35%;
+    font-size: 1.2em;
+    padding: 20px;
+  }
+  body .sidebar .profile-photo {
+    width: 190px;
+    height: 190px;
+  }
+  body .sidebar h2 {
+    font-size: 1.4em;
+  }
+  body section h2 {
+    font-size: 1.6em;
+  }
+  body .card {
+    margin: 25px 0;
+    padding: 25px;
+  }
+  body .card div, body .card ul {
+    font-size: 1.1em;
+  }
+  body .card h3 {
+    font-size: 1.5em;
+  }
+  body p {
+    font-size: 1em;
+  }
+}/*# sourceMappingURL=App.css.map */
