--- a/src/App.css
+++ b/src/App.css
@@ -60,25 +60,34 @@ body .container .sidebar .profile-photo {
   height: 150px;
   border-radius: 50%;
   margin-bottom: 30px;
+  cursor: pointer;
+  transition: width 0.3s ease, height 0.3s ease;
+}
+body .container .sidebar .profile-photo:hover {
+  width: 360px;
+  height: 360px;
+  border-radius: 50%;
+  margin-bottom: 30px;
 }
 body .container .sidebar address {
-  margin-top: 0;
+  margin-top: 15px;
 }
 body .container .sidebar address a {
   color: mediumaquamarine;
 }
 body .container .sidebar ul {
   list-style-type: none;
+  text-align: center;
 }
 body .container .sidebar ul h3 {
   margin: 15px 0 15px 0;
   color: deepskyblue;
-  text-align: start !important;
 }
 body .container .sidebar ul li {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  overflow-y: auto;
 }
 body .container .sidebar ul li li > span {
   display: block; /* Assurez-vous que span est affiché comme bloc */
@@ -292,7 +301,7 @@ body footer p {
 @media screen and (min-width: 1024px) {
   body header.cv-title {
     top: 170px;
-    left: 250px;
+    left: 400px;
     margin-bottom: 25px;
     overflow-y: hidden;
     overflow-x: hidden;
