--- a/src/App.css
+++ b/src/App.css
@@ -336,8 +336,8 @@ body footer p {
 /* Pour les écrans de 1024px et plus */
 @media screen and (min-width: 1024px) {
   body header.cv-title {
-    top: 170px;
-    left: 400px;
+    top: 150px;
+    left: 575px;
     margin-bottom: 25px;
     overflow-y: hidden;
     overflow-x: hidden;
@@ -368,10 +368,18 @@ body footer p {
     padding: 25px;
   }
   body .card div, body .card ul {
-    font-size: 1.1em;
+    font-size: 1em;
+    color: #ccc;
+    font-style: italic;
+  }
+  body .card div .formation-title, body .card ul .formation-title {
+    font-style: italic;
+    color: #ccc;
+    font-weight: normal;
+    font-size: 1em;
   }
   body .card h3 {
-    font-size: 1.5em;
+    font-size: 1.05em;
   }
   body p {
     font-size: 1em;
